Add missing days 16, 19, 20 and 21